samples/_failures_safe/1761368642_1bcd82_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_493f3d4b.c: In function ‘main’:
./samples/SAFE/__tmp_493f3d4b.c:150:5: error: expected expression at end of input
  150 |     add_edge(&graph, 0,
      |     ^~~~~~~~
./samples/SAFE/__tmp_493f3d4b.c:150:5: error: expected declaration or statement at end of input
